[tool.poetry]
name = "python3"
version = "0.1.0"
description = ""
authors = ["usulmund <yakovleva.a12@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aioconsole = "^0.6.2"
aiofiles = "^23.2.1"
pydantic = "==1.*"

[[tool.mypy.overrides]]
module = "aioconsole"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
